# eye-gaze-blink-tracking

./: README.md
data/: README.md  model-results.ipynb  model-results.ods
data/PSI-Stores/: README.md
data/class-features/: README.md
data/class-features/10sWindow/: all-AttentiveFeatures.csv  all-DistractedFeatures.csv  all-DistractedInattentiveFeatures.csv  (+13 more)
data/datasets/: Dataset-10sWindow-Attentive-Distracted.csv  Dataset-10sWindow-Attentive-DistractedInattentive.csv  Dataset-10sWindow-Attentive-Inattentive.csv  Dataset-20sWindow-Attentive-Distracted.csv  Dataset-20sWindow-Attentive-DistractedInattentive.csv  Dataset-20sWindow-Attentive-Inattentive.csv  Dataset-30sWindow-Attentive-Distracted.csv  Dataset-30sWindow-Attentive-DistractedInattentive.csv  Dataset-30sWindow-Attentive-Inattentive.csv  README.md
data/deblur-times/: README.md
data/models/: Model-20sWindow-RandomForest-Attentive-DistractedInattentive-exp3-only.model  Model-20sWindow-RandomForest-Attentive-DistractedInattentive.model
software/: .gitignore  README.md  appendCSV.py  convertToArff.py
software/CreatePredictionsStore/: CreatePredictionsStore.csproj  Program.cs
software/ExtractFeatureWindows/: BlinkFeatures.cs  DateTimeExtensions.cs  GazeFeatures.cs  LinqStatisticsExtensions.cs  ListExtensions.cs  Program.cs
software/OpenFacePostProcessing/: PSIConnectorSocket.cs  PSIPostProcessing.csproj  Program.cs  Styles.css  VideoWindow.cs  VideoWindow.xml
software/OpenFacePostProcessing/OpenFacePSIConnector/: CMakeLists.txt  LICENSE.txt  OpenFacePSIConnector.cpp  OpenFacePSIConnector.vcxproj
(+211 files in other folders)
